Enhance ReportScheduleDto and ReportScheduleData to include failure email handling
- Added a new field for failure email recipients in ReportScheduleData.
- Updated ReportScheduleDto to retrieve and set failure email addresses for report scheduling.
- Modified the sendTo list to use the new streamlined method for collecting email addresses.